@@ -26,6 +26,8 @@
 
 BOOL verify_row(const tightdb::Descriptor& descr, NSArray * data);
 BOOL insert_row(size_t ndx, tightdb::Table& table, NSArray * data);
+BOOL set_row(size_t ndx, tightdb::Table& table, NSArray *data);
 BOOL verify_row_with_labels(const tightdb::Descriptor& descr, NSDictionary* data);
 BOOL insert_row_with_labels(size_t row_ndx, tightdb::Table& table, NSDictionary *data);
+BOOL set_row_with_labels(size_t row_ndx, tightdb::Table& table, NSDictionary *data);
 #endif /* TIGHTDB_OBJC_SUPPORT_H */
