@@ -710,6 +710,39 @@ using namespace std;
     return [[TightdbCursor alloc] initWithTable:self ndx:ndx];
 }
 
+-(void)setObject:(id)newValue atIndexedSubscript:(NSUInteger)rowIndex
+{
+    tightdb::Table& table = *m_table;
+    tightdb::ConstDescriptorRef desc = table.get_descriptor();
+
+    if (table.size() < (size_t)rowIndex) {
+        // FIXME: raise exception - out of bound
+        return ;
+    }
+
+    if ([newValue isKindOfClass:[NSArray class]]) {
+        if (!verify_row(*desc, (NSArray *)newValue)) {
+            return; // FIXME: raise exception
+        }
+        if (!set_row(size_t(rowIndex), table, (NSArray *)newValue)) {
+            // FIXME: raise exception
+            return ;
+        }
+    }
+    
+    if ([newValue isKindOfClass:[NSDictionary class]]) {
+        if (!verify_row_with_labels(*desc, (NSDictionary *)newValue)) {
+            return; // FIXME: raise exception
+        }
+        if (!set_row_with_labels(size_t(rowIndex), table, (NSDictionary *)newValue)) {
+            // FIXME: raise exception
+            return ;
+        }
+    }
+    
+    /* FIXME: pull out properties of object and insert as row */
+}
+
 
 -(TightdbCursor*)cursorAtIndex:(NSUInteger)ndx
 {
